# algorithmic_thinking

./: .pre-commit-config.yaml  README.md  pyproject.toml
